<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/friendrequest_tab"
        android:layout_width="290dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sentTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sent_requests" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/receivedTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recieved_requests" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/tabFrameLayout"
        android:layout_width="409dp"
        android:layout_height="682dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

    <Button
        android:id="@+id/backFriendBut"
        android:layout_width="113dp"
        android:layout_height="50dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/friendrequest_tab"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>